My version of support of RHEL-based distros

--- a/install/rpm/httpd/httpd.conf
+++ b/install/rpm/httpd/httpd.conf
@@ -44,9 +44,7 @@ Group apache
 AccessFileName .htaccess
 
 <Files ~ "^\.ht">
-    Order allow,deny
-    Deny from all
-    Satisfy all
+    Require all denied
 </Files>
 
 TypesConfig /etc/mime.types
