--- a/install/rpm/proftpd/proftpd.conf
+++ b/install/rpm/proftpd/proftpd.conf
@@ -26,7 +26,9 @@ PassivePorts                    12000 12100
 
 <Global>
   Umask                         002
-  IdentLookups                  off
+  <IfModule mod_ident.c>
+      IdentLookups off
+  </IfModule>
   AllowOverwrite                yes
   <Limit ALL SITE_CHMOD>
     AllowAll
