Correct filesystem paths
Cleaning of RPM spec files

--- a/install/rpm/exim/exim.conf
+++ b/install/rpm/exim/exim.conf
@@ -41,7 +41,7 @@ tls_advertise_hosts = *
 
 # We test that $tls_in_sni is a valid domain, by an arbitrary email address foo@domain.tld .
 # Then, we extract the domain with a function that would fail if the email address is invalid.
-# If the certificate exists, we will use it, otherwise the default certificate in /etc/ssl will be used.
+# If the certificate exists, we will use it, otherwise the default certificate in /etc/pki will be used.
 tls_certificate = \
         ${if and {\
                      { eq {${domain:foo@$tls_in_sni}} {$tls_in_sni}}\
