--- a/install/rpm/proftpd/tls.conf
+++ b/install/rpm/proftpd/tls.conf
@@ -21,20 +21,20 @@ TLSServerCipherPreference               on
 # a command like:
 #
 # openssl req -x509 -newkey rsa:1024 \
-#          -keyout /etc/ssl/private/proftpd.key -out /etc/ssl/certs/proftpd.crt \
+#          -keyout /etc/pki/tls/private/proftpd.key -out /etc/pki/tls/certs/proftpd.crt \
 #          -nodes -days 365
 #
 # The proftpd.key file must be readable by root only. The other file can be
 # readable by anyone.
 #
-# chmod 0600 /etc/ssl/private/proftpd.key
-# chmod 0640 /etc/ssl/private/proftpd.key
+# chmod 0600 /etc/pki/tls/private/proftpd.key
+# chmod 0640 /etc/pki/tls/private/proftpd.key
 #
 TLSRSACertificateFile                   /usr/local/hestia/ssl/certificate.crt
 TLSRSACertificateKeyFile                /usr/local/hestia/ssl/certificate.key
 #
 # CA the server trusts...
-#TLSCACertificateFile                    /etc/ssl/certs/CA.pem
+#TLSCACertificateFile                    /etc/pki/tls/certs/ca-bundle.crt
 # ...or avoid CA cert and be verbose
 #TLSOptions                      NoCertRequest EnableDiags
 # ... or the same with relaxed session use for some clients (e.g. FireFtp)
