--- a/src/rpm/nginx/nginx.conf
+++ b/src/rpm/nginx/nginx.conf
@@ -3,7 +3,7 @@ user                 admin;
 worker_processes     1;
 worker_rlimit_nofile 65535;
 error_log            /var/log/hestia/nginx-error.log;
-pid                  /run/hestia-nginx.pid;
+pid                  /run/hestia/nginx.pid;
 pcre_jit             on;
 
 # Worker config
@@ -74,7 +74,7 @@ http {
 	ssl_ciphers                   "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:DHE-RSA-AES256-SHA256";
 	ssl_conf_command              Ciphersuites TLS_AES_128_GCM_SHA256:TLS_CHACHA20_POLY1305_SHA256:TLS_AES_256_GCM_SHA384;
 	ssl_conf_command              Options PrioritizeChaCha;
-	ssl_dhparam                   /etc/ssl/dhparam.pem;
+	ssl_dhparam                   /etc/pki/tls/dhparam.pem;
 	ssl_early_data                on;
 	ssl_ecdh_curve                auto;
 	ssl_prefer_server_ciphers     on;
@@ -141,7 +141,7 @@ http {
 		location ~ \.php$ {
 			include                  fastcgi_params;
 			fastcgi_param            SCRIPT_FILENAME /usr/local/hestia/web/$fastcgi_script_name;
-			fastcgi_pass             unix:/run/hestia-php.sock;
+			fastcgi_pass             unix:/run/hestia/php.sock;
 			fastcgi_intercept_errors on;
 			break;
 		}
