--- a/src/rpm/php/hestia-php.service
+++ b/src/rpm/php/hestia-php.service
@@ -5,10 +5,10 @@ PartOf=hestia.service
 
 [Service]
 Type=forking
-PIDFile=/run/hestia-php.pid
+PIDFile=/run/hestia/php.pid
 ExecStart=/usr/local/hestia/php/sbin/hestia-php --fpm-config /usr/local/hestia/php/etc/php-fpm.conf
-ExecReload=/bin/sh -c "/bin/kill -s HUP $(/bin/cat /run/hestia-php.pid)"
-ExecStop=/usr/bin/php -r '$pid=(int)file_get_contents("/run/hestia-php.pid");posix_kill($pid,SIGTERM);while(posix_kill($pid,0)){sleep(0);}'
+ExecReload=/bin/kill -USR2 $MAINPID
+ExecStop=/bin/kill -TERM $MAINPID
 ExecStartPre=/bin/bash -c "/bin/systemctl set-environment HOSTNAME=$(/usr/bin/hostname)"
 Environment="HESTIA=/usr/local/hestia"
 
