Added php cli selector Restored po files according to version of hestiacp Added some script to work with po/mo files Added fixes for rpm version

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"docs:dev": "vitepress dev docs",
 		"docs:build": "vitepress build docs",
 		"docs:serve": "vitepress serve docs",
+		"docs:preview": "vitepress preview docs --port=5173 --host=127.0.0.1",
 		"build": "node build.js",
 		"lint": "prettier --cache --check . && eslint --cache . && stylelint web/css/src/**/*.css && markdownlint-cli2 *.md docs/**/*.md",
 		"lint-staged": "lint-staged",
